[package]
name = "rplaylist"
version = "0.1.0"
authors = ["github.com/e-dm-b"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33"
csv = "1.1"
serde = { version = "1", features = ["derive"] }
rand = "0.8.3"
